Successfully received access_token. Mapped it to POJO.

--- a/javaAssignment/src/main/resources/templates/login.html
+++ b/javaAssignment/src/main/resources/templates/login.html
@@ -10,7 +10,7 @@
 <body>
      <div class="container my-2" align="center">
     <h1>User Registration</h1>
-    <form action="#" th:action="@{/register}" method="post" th:object="${user}">
+    <form action="#" th:action="@{/login}" method="post" th:object="${user}">
         <label>Login Id:</label>
         <input type="text" th:field="*{loginId}" /><br/>
  
